# devlabo

./: .gitignore  ARCHITECT.md  CLAUDE.md  PHASE4_PLAN.md  PLAN.md  README.md  TASKS.md  pyproject.toml
agent/: __init__.py  prompts.py  service.py  tools.py
client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageList.tsx
client/src/components/layout/: AppShell.tsx  IconSidebar.tsx
client/src/components/preview/: PreviewPane.tsx
client/src/components/sidebar/: ListModule.tsx
client/src/components/ui/: button.tsx  input.tsx  scroll-area.tsx  tooltip.tsx
client/src/hooks/: useAgent.ts  useSandbox.ts
client/src/lib/: api.ts
client/src/types/: index.ts
common/: __init__.py  r2_sync.py
gateway/: __init__.py  router.py
sandbox/: __init__.py  image.py  instance.py  process_manager.py
scripts/: chat.py  check_r2.py
security/: __init__.py  utils.py
tests/: __init__.py  test_agent_service.py  test_agent_tools.py  test_gateway.py  test_process_manager.py  test_r2_sync.py  test_security.py
