[project]
name = "devlabo"
version = "0.1.0"
description = "AI-powered app builder using Brain-Body-Storage architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "watchdog>=4.0.0",
    "modal>=0.64.0",
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    # AI Agent dependencies
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "moto[s3]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "security", "sandbox", "gateway", "agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["devlabo", "common", "security", "sandbox", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
